# daemon

./: CMakeLists.txt  README.md
debian/: changelog  control
src/: application.cpp  application.h  appmanager.cpp  appmanager.h  com.yoyo.AppManager.xml  com.yoyo.Daemon.conf  com.yoyo.Daemon.service  dstoretool.cpp  dstoretool.h  main.cpp  yoyo-getfastmirror  yoyo-permission-surveillance
